2007-10-18  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile: Disable build of alarm.c in misc.

2007-10-09  Kai Tietz  <kai.tietz@onevision.com>

	* _fstat64i32.c,_fwstat64i32.c: New.

2007-10-05  zhou drangon  <drangon.mail@gmail.com>

	* misc/spawnv.c: Corrected mode argument.
	* misc/spawnve.c: Likewise.
	* misc/spawnvp.c: Likewise.
	* misc/spawnvpe.c: Likewise.

2007-10-04  Kai Tietz  <kai.tietz@onevision.com>

	* misc/execv.c:
	* misc/execve.c: New.
	* misc/execvp.c: New.
	* misc/execvpe.c: New.
	* misc/spawnv.c: New.
	* misc/spawnve.c: New.
	* misc/spawnvp.c: New.
	* misc/spawnvpe.c: New.
	* Makefile: Add execv.c, execve.c, execvp.c, execvpe.c,
	spawnv.c, spawnve.c, spawnvp.c, and spawnvpe.c to build.

2007-10-01  Kai Tietz  <kai.tietz@onevision.com>

	* misc/difftime64.c: New.
	* misc/difftime32.c: New.
	* Makefile: Add difftime32.c and difftime64.c.

2007-10-01  zhou drangon  <drangon.mail@gmail.com>

	* math/remquof.S: Fixed typos.
	* math/ceill.S: Likewise.
	* math/floorl.S: Likewise.

2007-09-27  Kai Tietz  <kai.tietz@onevision.com>

	* math/logf.S: Removed.
	* math/floorf.S: Removed.
	* math/log10f.S: Removed.
	* math/copysignf.S: Removed.
	* math/copysign.S: Removed.
	* math/logf.c: New.
	* math/floorf.c: New.
	* math/log10f.c: New.
	* math/copysignf.c: New.
	* math/copysign.c: New.
	* math/ceill.S: Adjust calling convention.
	* math/copysignl.S: Likewise.
	* math/cosl.S: Likewise.
	* math/exp2.S: Likewise.
	* math/exp2f.S: Likewise.
	* math/exp2l.S: Likewise.
	* math/floorl.S: Likewise.
	* math/fma.S: Likewise.
	* math/fmaf.S: Likewise.
	* math/frexpl.S: Likewise.
	* math/ilogb.S: Likewise.
	* math/ilogbf.S: Likewise.
	* math/ilogbl.S: Likewise.
	* math/log10l.S: Likewise.
	* math/log1p.S: Likewise.
	* math/log1pf.S: Likewise.
	* math/log1pl.S: Likewise.
	* math/log2.S: Likewise.
	* math/log2f.S: Likewise.
	* math/log2l.S: Likewise.
	* math/logl.S: Likewise.
	* math/nearbyint.S: Likewise.
	* math/nearbyintf.S: Likewise.